@startuml
title Armamento Modular e Modificadores Piratas\nPadrões: STRATEGY (armas base) + DECORATOR (modificadores)

interface IArma {
    +atirar() : string
    +getDescricao() : string
}

class Laser {
    +atirar() : string
    +getDescricao() : string
}

class Misseis {
    +atirar() : string
    +getDescricao() : string
}

abstract class ModificadorArma {
    #armaDecorada: IArma*
    +ModificadorArma(arma: IArma*)
    +atirar() : string
    +getDescricao() : string
}

class DanoIncendiario {
    +atirar() : string
    +getDescricao() : string
}

class DanoPerfurante {
    +atirar() : string
    +getDescricao() : string
}

class Nave {
    -armaAtual: IArma*
    +equiparArma(arma: IArma*) : void
    +adicionarModificador(fabricaModificador: function<IArma*(IArma*)>) : void
    +atirar() : void
}

IArma <|.. Laser : Strategy concreta
IArma <|.. Misseis : Strategy concreta
IArma <|.. ModificadorArma
ModificadorArma <|-- DanoIncendiario
ModificadorArma <|-- DanoPerfurante
ModificadorArma o-- IArma : envolve >
Nave o-- IArma : usa >

note right of Nave
  Nave só chama atirar() genérico.
  Não conhece física de disparo
  nem modificadores.
end note

note bottom of ModificadorArma
  Decorators:
  cada modificador envolve a
  IArma anterior, permitindo
  combinações infinitas sem
  criar uma classe por combinação.
end note

@enduml
